--- a/FT/NewProject/index.html
+++ b/FT/NewProject/index.html
@@ -269,6 +269,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> <!-- Подключение библиотеки -->
     <script src="js/script.js"></script>
 </body>
 </html>
