--- a/FT/NewProject copy/index.html
+++ b/FT/NewProject copy/index.html
@@ -283,6 +283,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> <!-- Подключение библиотеки -->
-    <script src="js/bundle.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
